force-app/main/default/objects/Animal__c/fields/ifAdapted__c.field-meta.xml
<CustomField>
    <fullName>ifAdapted__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ifAdapted</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>