force-app/main/default/objects/Animal__c/fields/Photo__c.field-meta.xml
<CustomField>
    <fullName>Photo__c</fullName>
    <formula>IF( ISBLANK(URLtoFoto__c ) , IMAGE(&quot;https://upload.wikimedia.org/wikipedia/commons/9/98/Brak_zdj%C4%99cia.svg&quot;,&quot;tekst&quot;, 200, 200), IMAGE( URLtoFoto__c ,&quot;tekst&quot;, 200, 200))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Photo</label>
    <type>Text</type>
</CustomField>