force-app/main/default/objects/Animal__c/fields/URLtoFoto__c.field-meta.xml
<CustomField>
    <fullName>URLtoFoto__c</fullName>
    <label>URLtoFoto</label>
    <type>Url</type>
</CustomField>